--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <table>
             <tr>
-                <td><img width="300" src="image/yellow-logo.png" alt="Sk.Arif photo"></td>
+                <td><img width="300" src="/image/yellow-logo.png" alt="Sk.Arif photo"></td>
                 <td><h1>Sheikh Arif</h1>
                     <p><i>Creator of <a target="_blank" href="https://www.codingshuttle.com">Codingopedia</a> & Web Developer</i></p>
                     <p>I ❤️ Web Development and here to guide the Coding Enthusiast 🚀</p>
